--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
 
 <p>ydeploy integrates with the hybris platform build framework and attempts to reduce the amount of effort necessary to implement automated build and deployment tasks for hybris software across your environment landscape. Like the hybris build framework, ydeploy is built on Apache Ant and should be easy to pickup for most Java developers.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>For questions, comments, suggestions, or other feedback please send a message to <a href="https://github.com/zmcmahon-avatria" class="user-mention">@zmcmahon-avatria</a>.</p>
-      <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/avatria/ydeploy">ydeploy</a> is an open source community project that is maintained by <a href="http://www.avatria.com">Avatria</a>.</span>
+     <footer class="site-footer">
+        <span class="site-footer-owner">All listed projects are maintained by <a href="http://www.avatria.com">Avatria</a>.</span>
       </footer>
     </section>
 
